--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,18 @@ body,
 	overflow: hidden;
 }
 
+@media (max-width: 992px) {
+	html,
+	body,
+	#root {
+		height: 100vh;
+		width: 100%;
+		overflow: hidden;
+		touch-action: none;
+		-ms-touch-action: none;
+	}
+}
+
 input,
 button,
 textarea {
